# nicolasdesnoust.github.io

./: .gitignore  3rdpartylicenses.txt  404.html  5.64e7c87ac8376f12198a.js  6.c3684fc6022ae76f0166.js  7.336dc644d38d7f58da0d.js  8.67c97729751ba4daa6e6.js  README.md  Taskfile.yml  angular.json  commitlint.config.ts  common.6d996e1e0188f76c4cda.js  index.html  main.766e0424cb9044f1d460.js  nx.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  polyfills.eb955bc11dd1c4fb0794.js  pyproject.toml  runtime.164c899b85257d1e6b0f.js  scripts.9aabe0a2cff11cd8d8a3.js  scully.portfolio.config.ts  styles.287a5f3d2067d242d96a.css  tsconfig.base.json  tslint.json
.github/workflows/: backend-pipeline.yml  continuous-delivery.yaml  continuous-integration.yaml  frontend-pipeline.yml  manual-deployment.yaml  scully-publish.yml
.scully/: settings.yml
assets/: scully-routes.json
assets/data/: projects.json  puzzles.json
backend/: Taskfile.yml  pom.xml  template.yml
codingame/: index.html
contact/: index.html
docs/: notes.txt
docs/api/: Taskfile.yml  api.yaml  package.json  project.json  redocly.yaml
docs/architecture/: Component Diagram pour la SPA.drawio  Container Diagram.drawio  README.md  System Context Diagram.drawio
docs/decorators/: remove-dots.js
docs/openapi/: Taskfile.yml  package.json
frontend/: .gitignore  Taskfile.yml  angular.json  package-lock.json  package.json  project.json  tsconfig.json
home/: index.html
iac/: .tflint.hcl  Taskfile.yml  project.json
projects/: index.html
src/: index.html  styles.scss
(+360 files in other folders)
